Better handling of float clearing. Prevents scrollbars on nav which can occur with some themes.

--- a/css/eventorganiser-front-end.css
+++ b/css/eventorganiser-front-end.css
@@ -6,8 +6,16 @@
 	float:left;
 }
 .eo-tc-page nav{
-	overflow: auto;
+	overflow: inherit;
 	margin: 10px auto;
+}
+
+.eo-tc-page nav:after {
+	content: ".";
+	display: block;
+	height: 0;
+	clear: both;
+	visibility: hidden;
 }
 
 .eo-tc-event{
